<resources>
    <string name="app_name">HelloAndroid</string>




    <string name="moto">The U Is You!</string>
    <string name="school">Udacity</string>
    <string name="adress1">2465 Latham St.</string>
    <string name="adress2">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="url">www.udacity.com</string>
    <string name="image">@drawable/udacty</string>
    <string name="desc">image</string>

</resources>
