<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context="com.example.android.helloandroid.MainActivity">


    <ImageView
        style="@style/Image"
        android:scaleType="fitStart"
        android:src="@drawable/udacty"
        android:layout_height="171dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/textView"
        style="@style/Textone"
        android:text="@string/moto"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView2"
       style="@style/Texttwo"
        android:textAlignment="center"
        android:text="@string/school"
         />

    <TextView
        android:id="@+id/textView3"
        style="@style/Textthree"
        android:text="@string/adress1"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"/>


    <TextView
        android:id="@+id/textView4"
        style="@style/Textfour"
        android:text="@string/adress2"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingStart="25dp"
        android:paddingLeft="8dp"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/Textfive"
        android:text="@string/phone"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"/>


    <TextView
        android:id="@+id/textView6"
       style="@style/Textsix"
        android:text="@string/url"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"/>
</LinearLayout>
